                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 09-04-2005 changed: Project Mayhem III is new default skin
  - 09-04-2005 added: directory tokens which reference XBMC's special directories for use as bookmark paths: $HOME, $SUBTITLES, $THUMBNAILS, $SHORTCUTS, $ALBUMS, $RECORDINGS, $SCREENSHOTS, $PLAYLISTS
  - 09-04-2005 fixed: music database cleanup with LARGE song table (SF bug 1172234)
  - 09-04-2005 added: support for pausing and rebuffering completly before continuing playback when running out of data
  - 09-04-2005 added: support for using a skinned progress control in fullscreen video to display current position.
  - 08-04-2005 changed: <visible> tag in image controls is now a boolean conditional.  eg <visible>Player.HasMedia</visible> will cause the image to be rendered only if the player has something playing (or paused). 
  - 08-04-2005 changed: Z-buffer now used throughout the GUI (more mem usage, but it's needed for the visz)
  - 08-04-2005 changed: Hardware overlays renderer drops down to low quality pixel shader for the GUI.  Means
                        we have more mem free + the use of alpha.
  - 08-04-2005 fixed: Fullscreen Visualisation render order if no visualisation control present.
  - 07-04-2005 changed: alpha-numeric sorting is now case-insensitive.
  - 07-04-2005 changed: Reduced Karaoke settings considerably.
  - 07-04-2005 fixed: SetViewPort() crash if given out of range values.
  - 07-04-2005 added: Support for <execute> tag in keymap.xml
  - 07-04-2005 added: More subtitle colours (Blue, Bright Green, Cyan + Yellow Green)